data/derived/comb/progs/unify/prog7715.ml.out
Characters 159-160:
  let num = (l1e + l2e + carry) in (num mod 9, 7 @ list) in
                                               ^
Error: This expression has type int but an expression was expected of type
         'a list
